[tool.poetry]
name = "textmerge"
version = "0.1.0"
description = ""
authors = ["Andrew Sindel <asindel@esusdclass.org>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^3.7.0"
oauth2client = "^4.1.3"
openpyxl = "^3.0.6"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
